--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Generator-Lego by duowan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -27,8 +27,7 @@
 </blockquote>
 
 <h3>
-<a id="目录" class="anchor" href="#%E7%9B%AE%E5%BD%95" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<a name="top"></a>目录</h3>
+<a id="目录" class="anchor" href="#%E7%9B%AE%E5%BD%95" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="top"></a>目录</h3>
 
 <ul>
 <li><a href="#intro">主要功能</a></li>
@@ -43,8 +42,7 @@
 </ul>
 
 <h3>
-<a id="主要功能-" class="anchor" href="#%E4%B8%BB%E8%A6%81%E5%8A%9F%E8%83%BD-" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<a name="intro"></a>主要功能 <a href="#top">[⬆]</a>
+<a id="主要功能-" class="anchor" href="#%E4%B8%BB%E8%A6%81%E5%8A%9F%E8%83%BD-" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="intro"></a>主要功能 <a href="#top">[⬆]</a>
 </h3>
 
 <p>这是一个帮助前端开发工程师简化工作的工具，它的主要功能是：</p>
@@ -63,54 +61,44 @@
 </ul>
 
 <h3>
-<a id="环境准备-" class="anchor" href="#%E7%8E%AF%E5%A2%83%E5%87%86%E5%A4%87-" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<a name="sys-env"></a>环境准备 <a href="#top">[⬆]</a>
+<a id="环境准备-" class="anchor" href="#%E7%8E%AF%E5%A2%83%E5%87%86%E5%A4%87-" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="sys-env"></a>环境准备 <a href="#top">[⬆]</a>
 </h3>
 
 <ol>
-<li>Node 环境：<em>默认此步骤已完成</em>  （Mac用户建议使用 <a href="http://brew.sh/">Brew</a> 安装 <a href="http://nodejs.org/">Node.js</a>） </li>
-<li>Yeoman环境：<code>npm install -g yo</code>
+<li>Node 环境：支持到 <a href="http://nodejs.org/en/blog/release/v0.12.9/">Node v0.12.9</a>；若已安装高版本的Node，<a href="#known-issues">请使用 nvm 切换至 0.10.x 或 0.12.x</a> 再执行下面步骤</li>
+<li>Yo、Gulp 环境 ：<code>npm install -g yo gulp</code>
 </li>
-<li>Gulp 环境：<code>npm install -g gulp</code>
-</li>
-<li>图片编辑环境(Mac)：
+<li>Subversion Command-Line (Mac已自带，Win如未安装可<a href="http://pan.baidu.com/s/1gdrQ7Px">点击下载</a>)</li>
+</ol>
+
+<h3>
+<a id="快速开始-" class="anchor" href="#%E5%BF%AB%E9%80%9F%E5%BC%80%E5%A7%8B-" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="quick-start"></a>快速开始 <a href="#top">[⬆]</a>
+</h3>
+
+<p>提供以下2种获取方式： </p>
+
+<ol>
+<li>
+<p>npm</p>
 
 <ul>
-<li>
-<code>brew install GraphicsMagick</code> </li>
-<li>
-<code>brew install phantomjs</code> </li>
+<li><code>npm install -g generator-lego</code></li>
+<li>在空目录执行 <code>yo lego</code> 初始化项目</li>
 </ul>
 </li>
-<li>图片编辑环境(Win)：
+<li>
+<p>Clone the repo</p>
 
 <ul>
-<li>
-<a href="http://www.graphicsmagick.org/download.html">GraphicsMagick 下载地址</a> 备胎：<a href="http://pan.baidu.com/s/1qWDE7Y8#path=%252Ff2e-workflow">GraphicsMagick-1.3.20-<strong>Q8</strong>-win<strong>32/64</strong>-dll.zip</a>
-</li>
-<li>
-<a href="http://phantomjs.org/download.html">phantomjs 下载地址</a>  备胎：<a href="http://pan.baidu.com/s/1qWDE7Y8#path=%252Ff2e-workflow">phantomjs-1.9.7-windows.zip</a>
-</li>
-<li>
-<a href="https://github.com/hzlzh/f2e-workflow/issues/6">添加环境变量</a>  设置环境变量后，重启系统。</li>
+<li>点击右边【clone in desktop】克隆到本地</li>
+<li>在克隆目录执行 <code>npm link</code> 链接到全局模块的位置</li>
+<li>在空目录执行 <code>yo lego</code> 初始化项目</li>
 </ul>
 </li>
 </ol>
 
 <h3>
-<a id="快速开始-" class="anchor" href="#%E5%BF%AB%E9%80%9F%E5%BC%80%E5%A7%8B-" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<a name="quick-start"></a>快速开始 <a href="#top">[⬆]</a>
-</h3>
-
-<ul>
-<li>点击右边【clone in desktop】克隆到本地</li>
-<li>在克隆目录执行 <code>npm link</code> 链接到全局模块的位置</li>
-<li>在任意空目录执行 <code>yo lego</code> 初始化项目</li>
-</ul>
-
-<h3>
-<a id="文件结构-" class="anchor" href="#%E6%96%87%E4%BB%B6%E7%BB%93%E6%9E%84-" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<a name="file-tree"></a>文件结构 <a href="#top">[⬆]</a>
+<a id="文件结构-" class="anchor" href="#%E6%96%87%E4%BB%B6%E7%BB%93%E6%9E%84-" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="file-tree"></a>文件结构 <a href="#top">[⬆]</a>
 </h3>
 
 <p><code>generator-lego</code> 初始化和执行任务涉及的文件结构：</p>
@@ -142,8 +130,7 @@
 </code></pre>
 
 <h3>
-<a id="功能说明-" class="anchor" href="#%E5%8A%9F%E8%83%BD%E8%AF%B4%E6%98%8E-" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<a name="func-dtls"></a>功能说明 <a href="#top">[⬆]</a>
+<a id="功能说明-" class="anchor" href="#%E5%8A%9F%E8%83%BD%E8%AF%B4%E6%98%8E-" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="func-dtls"></a>功能说明 <a href="#top">[⬆]</a>
 </h3>
 
 <h4>
@@ -168,8 +155,7 @@
 </ul>
 
 <h3>
-<a id="任务说明-" class="anchor" href="#%E4%BB%BB%E5%8A%A1%E8%AF%B4%E6%98%8E-" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<a name="task-dtls"></a>任务说明 <a href="#top">[⬆]</a>
+<a id="任务说明-" class="anchor" href="#%E4%BB%BB%E5%8A%A1%E8%AF%B4%E6%98%8E-" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="task-dtls"></a>任务说明 <a href="#top">[⬆]</a>
 </h3>
 
 <h4>
@@ -203,6 +189,14 @@
 </ul>
 
 <h4>
+<a id="发布" class="anchor" href="#%E5%8F%91%E5%B8%83" aria-hidden="true"><span class="octicon octicon-link"></span></a>发布</h4>
+
+<ul>
+<li>
+<code>gulp publish</code> 将 <code>dest/</code>静态文件上传到svn。</li>
+</ul>
+
+<h4>
 <a id="打包" class="anchor" href="#%E6%89%93%E5%8C%85" aria-hidden="true"><span class="octicon octicon-link"></span></a>打包</h4>
 
 <ul>
@@ -211,56 +205,83 @@
 </ul>
 
 <h4>
+<a id="检测" class="anchor" href="#%E6%A3%80%E6%B5%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>检测</h4>
+
+<ul>
+<li>
+<code>gulp hint</code> 检测<code>src/</code>文件下的语法。</li>
+</ul>
+
+<h4>
 <a id="其他命令参数" class="anchor" href="#%E5%85%B6%E4%BB%96%E5%91%BD%E4%BB%A4%E5%8F%82%E6%95%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他命令参数</h4>
 
 <ol>
 <li>
-<p><code>gulp [-p &lt;port&gt;] [-w]</code></p>
+<p><code>gulp [-p &lt;port&gt;] [-q] [-w &lt;width-of-design-page&gt;]</code></p>
 
 <ul>
 <li>
 <code>-p</code> port 的简写，给webserver指定端口号；此参数需要指定参数值作为端口号，如：8080</li>
 <li>
-<code>-w</code> watch 的简写，检测slice文件夹，自动生成scss样式；此参数不需指定参数值</li>
+<code>-q</code> qrcode 的简写，指定该参数生成 url的二维码</li>
+<li>
+<code>-w</code> 指设计稿像素宽度，默认值 <code>750</code>，用来生成生成rem单位的切片语法；如不指定<code>-w</code>将生成px单位的语法</li>
 </ul>
 </li>
 <li>
-<p><code>gulp build [-p &lt;port&gt;]</code></p>
+<p><code>gulp build [-p &lt;port&gt;] [-q] [-w &lt;width-of-design-page&gt;]</code></p>
 
 <ul>
 <li>
-<code>-p</code> port 的简写，给webserver指定端口号；此参数需要指定参数值作为端口号，如：8080</li>
+<code>-p</code> 指port，给webserver指定端口号；此参数需要指定参数值作为端口号，如：8080</li>
+<li>
+<code>-q</code> 指qrcode，指定该参数生成 url的二维码</li>
+<li>
+<code>-w</code> 指设计稿像素宽度，默认值 <code>750</code>，将使用rem单位更新定位数据；如不指定<code>-w</code>将使用px单位更新定位数据</li>
+</ul>
+</li>
+<li>
+<p><code>gulp publish [-m &lt;message&gt;]</code></p>
+
+<ul>
+<li>
+<code>-m</code> svn提交日记</li>
 </ul>
 </li>
 </ol>
 
 <h3>
-<a id="demo-" class="anchor" href="#demo-" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<a name="show-case"></a>Demo <a href="#top">[⬆]</a>
+<a id="demo-" class="anchor" href="#demo-" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="show-case"></a>Demo <a href="#top">[⬆]</a>
 </h3>
 
 <p><img src="https://cloud.githubusercontent.com/assets/1762523/4558145/146cf2e4-4edc-11e4-8e21-9d408776a14d.gif" alt="showcase01"></p>
 
 <h3>
-<a id="已知问题-" class="anchor" href="#%E5%B7%B2%E7%9F%A5%E9%97%AE%E9%A2%98-" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<a name="known-issues"></a>已知问题 <a href="#top">[⬆]</a>
+<a id="已知问题-" class="anchor" href="#%E5%B7%B2%E7%9F%A5%E9%97%AE%E9%A2%98-" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="known-issues"></a>已知问题 <a href="#top">[⬆]</a>
 </h3>
 
 <ol>
-<li>win下 <code>npm install gulp-sass@2.0.0</code> 报 git命令没有找到，导致安装失败 
+<li>管理 node版本
 
 <ul>
-<li>临时处理，在 git shell 下执行<code>npm install gulp-sass@2.0.0</code>
+<li>mac用户使用<a href="https://github.com/creationix/nvm">nvm</a>
+
+<ul>
+<li>安装nvm：<code>curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.30.1/install.sh | bash</code> </li>
+<li>激活nvm：<code>[[ -s $HOME/.nvm/nvm.sh ]] &amp;&amp; . $HOME/.nvm/nvm.sh</code>，并加到 <code>~/.bashrc</code>、<code>~/.profile</code>或<code>~/.zshrc</code>配置中</li>
+<li>node的安装和切换见官方文档</li>
+</ul>
 </li>
-<li>该问题依赖模块已解决，等待官方下个版本更新<a href="https://github.com/sass/node-sass/issues/933">issue</a><a href="https://github.com/sass/node-sass/pull/943">issue</a>
+<li>win 用户使用<a href="https://github.com/coreybutler/nvm-windows">nvm-windows</a>
 </li>
 </ul>
 </li>
 </ol>
 
+<p>请使用Mac请使用[nvm] <em>默认此步骤已完成</em>  （Mac建议使用 <a href="http://brew.sh/">Brew</a> 安装 <a href="http://nodejs.org/">Node.js</a>） </p>
+
 <h3>
-<a id="license-" class="anchor" href="#license-" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<a name="license"></a>License <a href="#top">[⬆]</a>
+<a id="license-" class="anchor" href="#license-" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="license"></a>License <a href="#top">[⬆]</a>
 </h3>
 
 <p>Released under <a href="http://rem.mit-license.org/">MIT</a> LICENSE</p>
@@ -288,4 +309,3 @@
 
   </body>
 </html>
-
